fixed card readability

--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -4,8 +4,8 @@
    margin: 1rem 0;
    min-width: 280px;
    width: 280px;
-   height: 400px;
-   border: 1px solid rgba(255, 127, 127, 0.2);
+   height: 475px;
+   border: 5px solid rgba(255, 255, 255, 0.4);
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -25,10 +25,11 @@
 
 .game-card-image {
    width: 100%;
-   height: 200px;
+   height: 100%;
    object-fit: cover;
    border-radius: 4px;
    margin-bottom: 1rem;
+   display: block;
 }
 
 .game-card-description {
